Update 'nodejs-mewcvrhc' component image to: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/nodejs-mewcvrhc:3c4f74b209af2a4ffb813b39fb45753c37e5f008@sha256:4d363d5efa42910aa4d6e94d646df7244559e682191fddfed1b803c1a444afa3

--- a/components/nodejs-mewcvrhc/overlays/development/deployment-patch.yaml
+++ b/components/nodejs-mewcvrhc/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nodejs-mewcvrhc
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: nexus-docker-nexus.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/nodejs-mewcvrhc:3c4f74b209af2a4ffb813b39fb45753c37e5f008@sha256:4d363d5efa42910aa4d6e94d646df7244559e682191fddfed1b803c1a444afa3
+          name: container-image
